# fortran-splitmix64

./: README.md
reference/: CMakeLists.txt  README.md
reference/src/: main.c  test.h
src/: imp_next.f90  module.f90
test/: CMakeLists.txt  README.md
test/src/: main.f90
test/src/pkg_test_splitmix64/: module.f90
